exports[`invalid(1): {\"exports\": {\".\": {\"types\": \"./a.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./a.ts"}}}

`;

exports[`invalid(1): {\"exports\": {\".\": {\"types\": \"./a.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./a.ts"}}}
    |                   ^^^^^^^^^^^^^^^^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(10): {\"main\": \"lib\", \"exports\": {\".\": \"./dist/index.js\"}} 1`] = `

[Input]
  1 | {"main": "lib", "exports": {".": "./dist/index.js"}}

`;

exports[`invalid(10): {\"main\": \"lib\", \"exports\": {\".\": \"./dist/index.js\"}} 2`] = `

Message:
> 1 | {"main": "lib", "exports": {".": "./dist/index.js"}}
    |                                  ^^^^^^^^^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`lib\`.

`;

exports[`invalid(11): {\"main\": \".\", \"exports\": {\"default\": \"./dist/index.js\"}} 1`] = `

[Input]
  1 | {"main": ".", "exports": {"default": "./dist/index.js"}}

`;

exports[`invalid(11): {\"main\": \".\", \"exports\": {\"default\": \"./dist/index.js\"}} 2`] = `

Message:
> 1 | {"main": ".", "exports": {"default": "./dist/index.js"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`.\`.

`;

exports[`invalid(12): {\"main\": \".\", \"exports\": {\".\": \"./.js\"}} 1`] = `

[Input]
  1 | {"main": ".", "exports": {".": "./.js"}}

`;

exports[`invalid(12): {\"main\": \".\", \"exports\": {\".\": \"./.js\"}} 2`] = `

Message:
> 1 | {"main": ".", "exports": {".": "./.js"}}
    |                                ^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`.\`.

`;

exports[`invalid(13): {\"main\": \".\", \"exports\": {\".\": \"./\"}} 1`] = `

[Input]
  1 | {"main": ".", "exports": {".": "./"}}

`;

exports[`invalid(13): {\"main\": \".\", \"exports\": {\".\": \"./\"}} 2`] = `

Message:
> 1 | {"main": ".", "exports": {".": "./"}}
    |                                ^^^^ The \`exports\` root does not expose the package \`main\` entry point \`.\`.

`;

exports[`invalid(14): {\"main\": \"dist\", \"exports\": {\".\": \"./dist/\"}} 1`] = `

[Input]
  1 | {"main": "dist", "exports": {".": "./dist/"}}

`;

exports[`invalid(14): {\"main\": \"dist\", \"exports\": {\".\": \"./dist/\"}} 2`] = `

Message:
> 1 | {"main": "dist", "exports": {".": "./dist/"}}
    |                                   ^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`dist\`.

`;

exports[`invalid(15): {\"main\": \"index\", \"exports\": {\".\": \"./index.cjs\"}} 1`] = `

[Input]
  1 | {"main": "index", "exports": {".": "./index.cjs"}}

`;

exports[`invalid(15): {\"main\": \"index\", \"exports\": {\".\": \"./index.cjs\"}} 2`] = `

Message:
> 1 | {"main": "index", "exports": {".": "./index.cjs"}}
    |                                    ^^^^^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`index\`.

`;

exports[`invalid(16): {\"exports\": {\".\": {\"types\": \"./a.d.ts\", \"import\": \"./a.js\", \"import\": \"./a.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./a.d.ts", "import": "./a.js", "import": "./a.d.ts"}}}

`;

exports[`invalid(16): {\"exports\": {\".\": {\"types\": \"./a.d.ts\", \"import\": \"./a.js\", \"import\": \"./a.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./a.d.ts", "import": "./a.js", "import": "./a.d.ts"}}}
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(17): {\"main\": \"./a.js\", \"exports\": {\".\": {\"import\": \"./a.js\", \"import\": \"./b.js\"}}} 1`] = `

[Input]
  1 | {"main": "./a.js", "exports": {".": {"import": "./a.js", "import": "./b.js"}}}

`;

exports[`invalid(17): {\"main\": \"./a.js\", \"exports\": {\".\": {\"import\": \"./a.js\", \"import\": \"./b.js\"}}} 2`] = `

Message:
> 1 | {"main": "./a.js", "exports": {".": {"import": "./a.js", "import": "./b.js"}}}
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`./a.js\`.

`;

exports[`invalid(2): {\"exports\": {}} 1`] = `

[Input]
  1 | {"exports": {}}

`;

exports[`invalid(2): {\"exports\": {}} 2`] = `

Message:
> 1 | {"exports": {}}
    |             ^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(3): {\"exports\": {\".\": {\"types\": \"./a.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./a.d.ts"}}}

`;

exports[`invalid(3): {\"exports\": {\".\": {\"types\": \"./a.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./a.d.ts"}}}
    |                   ^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(4): {\"exports\": {\".\": {\"types@>=5.0\": \"./a.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types@>=5.0": "./a.d.ts"}}}

`;

exports[`invalid(4): {\"exports\": {\".\": {\"types@>=5.0\": \"./a.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types@>=5.0": "./a.d.ts"}}}
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(5): {\"exports\": {\"./sub\": \"./sub.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./sub": "./sub.js"}}

`;

exports[`invalid(5): {\"exports\": {\"./sub\": \"./sub.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./sub": "./sub.js"}}
    |             ^^^^^^^^^^^^^^^^^^^^^ \`exports\` has subpaths but no \`.\` root entry, so the package cannot be imported by its name.

`;

exports[`invalid(6): {\n\t\t\t\"exports\": {\n\t\t\t\t\"./sub\": \"./sub.js\",\n\t\t\t\t\"./package.json\": \"./package.json\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"exports": {
  3 | 				"./sub": "./sub.js",
  4 | 				"./package.json": "./package.json"
  5 | 			}
  6 | 		}

`;

exports[`invalid(6): {\n\t\t\t\"exports\": {\n\t\t\t\t\"./sub\": \"./sub.js\",\n\t\t\t\t\"./package.json\": \"./package.json\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
> 2 | 			"exports": {
    | 			           ^
> 3 | 				"./sub": "./sub.js",
    | ^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 				"./package.json": "./package.json"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 | 			}
    | ^^^^ \`exports\` has subpaths but no \`.\` root entry, so the package cannot be imported by its name.
  6 | 		}

`;

exports[`invalid(7): {\"exports\": {\".\": null}} 1`] = `

[Input]
  1 | {"exports": {".": null}}

`;

exports[`invalid(7): {\"exports\": {\".\": null}} 2`] = `

Message:
> 1 | {"exports": {".": null}}
    |                   ^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(8): {\"exports\": {\".\": {\"types\": \"./index.d.ts\"}}} 1`] = `

[Input]
  1 | {"exports": {".": {"types": "./index.d.ts"}}}

`;

exports[`invalid(8): {\"exports\": {\".\": {\"types\": \"./index.d.ts\"}}} 2`] = `

Message:
> 1 | {"exports": {".": {"types": "./index.d.ts"}}}
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ The \`exports\` root must expose a runtime entry point, not only types or a blocked target.

`;

exports[`invalid(9): {\"main\": \"./index.js\", \"exports\": {\".\": \"./index.mjs\"}} 1`] = `

[Input]
  1 | {"main": "./index.js", "exports": {".": "./index.mjs"}}

`;

exports[`invalid(9): {\"main\": \"./index.js\", \"exports\": {\".\": \"./index.mjs\"}} 2`] = `

Message:
> 1 | {"main": "./index.js", "exports": {".": "./index.mjs"}}
    |                                         ^^^^^^^^^^^^^ The \`exports\` root does not expose the package \`main\` entry point \`./index.js\`.

`;
